overflow-x fixed

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+    overflow-x: hidden;
+}
+
 .shadowed {
     box-shadow: 0 0 10px 4px rgba(0, 0, 0, .1);
 }
